# move-binding-cmdoss

./: Cargo.toml
.cargo/: config.toml
move-binding/: Cargo.toml
move-binding-derive/: Cargo.toml
move-binding-derive/src/: lib.rs
move-binding-derive/tests/: test.rs
move-binding/src/: lib.rs  move_codegen.rs  package_provider.rs  types.rs
move-binding/tests/snapshots/: snapshot_tests__0x1.snap  snapshot_tests__0x2.snap  snapshot_tests__0x3.snap  snapshot_tests__0x8270feb7375eee355e64fdb69c50abb6b5f9393a722883c1cf45f8e26048810a.snap  snapshot_tests__0xb.snap  snapshot_tests__0xd84704c17fc870b8764832c535aa6b11f21a95cd6f5bb38a9b07d2cf42220c66.snap
move-types/: Cargo.toml
move-types/src/: functions.rs  lib.rs
