[workspace]
resolver = "2"

members = [
    "move-types",
    "move-binding",
    "move-binding-derive"
]

[workspace.dependencies]
serde = { version = "1.0.228" }

thiserror = "2.0.17"
sui-sdk-types = "0.3.0"
sui-transaction-builder = "0.3.0"
sui-graphql = "0.3.0"
sui-graphql-macros = "0.3.0"
sui-rpc = "0.3.0"
move-core-types = { git = "https://github.com/MystenLabs/sui.git", tag = "mainnet-v1.69.2" }
move-binary-format = { git = "https://github.com/MystenLabs/sui.git", tag = "mainnet-v1.69.2" }
