[workspace]
resolver = "2"

members = [
    "move-types",
    "move-binding",
    "move-binding-derive"
]

[workspace.dependencies]
serde = { version = "1.0.228" }

thiserror = "2.0.17"
sui-sdk-types = "0.3.0"
sui-transaction-builder = "0.3.0"
sui-graphql = "0.3.0"
sui-graphql-macros = "0.3.0"
sui-rpc = "0.3.0"
move-core-types = { version = "0.0.4", registry = "kellnr" }
move-binary-format = { version = "0.0.3", registry = "kellnr" }
