[package]
name = "move-binding-derive"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = "^2.0.46"
quote = "^1.0.35"
proc-macro2 = "^1.0.74"
serde = { workspace = true, features = ["derive"] }
sui-sdk-types.workspace = true
sui-transaction-builder.workspace = true
move-binding = { path = "../move-binding" }
move-types = { path = "../move-types" }
bcs = "0.1.6"
thiserror.workspace = true

[dev-dependencies]
tokio = { version = "1.43.0", features = ["full"] }
sui-client.workspace = true