[package]
name = "move-types"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
serde.workspace = true
sui-sdk-types.workspace = true
sui-transaction-builder.workspace = true
move-core-types.workspace = true
thiserror.workspace = true
sui-client.workspace = true